--- a/css/style.css
+++ b/css/style.css
@@ -709,6 +709,16 @@ body._lock {
   bottom: 0;
 }
 
+.first__title {
+  -webkit-transition: all 0.3s ease 0.2s;
+  -o-transition: all 0.3s ease 0.2s;
+  transition: all 0.3s ease 0.2s;
+  opacity: 0;
+  -webkit-transform: translate(0, -120%);
+      -ms-transform: translate(0, -120%);
+          transform: translate(0, -120%);
+}
+
 .first__title h1 {
   font-family: Guerrilla, sans-serif;
   font-style: normal;
@@ -719,7 +729,21 @@ body._lock {
   text-align: center;
 }
 
+.first__title._anim-items._csdsa {
+  opacity: 1;
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+          transform: translate(0, 0);
+}
+
 .first__subtitle {
+  -webkit-transition: all 0.3s ease 0.8s;
+  -o-transition: all 0.3s ease 0.8s;
+  transition: all 0.3s ease 0.8s;
+  opacity: 0;
+  -webkit-transform: translate(0, -120%);
+      -ms-transform: translate(0, -120%);
+          transform: translate(0, -120%);
   font-family: Guerrilla, sans-serif;
   text-align: center;
   font-style: normal;
@@ -728,6 +752,13 @@ body._lock {
   font-size: 30px;
   line-height: 36px;
   color: #FFFFFF;
+}
+
+.first__subtitle._anim-items._csdsa {
+  opacity: 1;
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+          transform: translate(0, 0);
 }
 
 .first__subtitle:before {
@@ -821,6 +852,13 @@ body._lock {
 }
 
 .about__subtitle {
+  -webkit-transition: all 0.3s ease 0.2s;
+  -o-transition: all 0.3s ease 0.2s;
+  transition: all 0.3s ease 0.2s;
+  opacity: 0;
+  -webkit-transform: translate(-120%, 0);
+      -ms-transform: translate(-120%, 0);
+          transform: translate(-120%, 0);
   font-family: Guerrilla, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -828,7 +866,21 @@ body._lock {
   line-height: 43px;
 }
 
+.about__subtitle._anim-items._csdsa {
+  opacity: 1;
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+          transform: translate(0, 0);
+}
+
 .about__susubtitle {
+  -webkit-transition: all 0.3s ease 0.6s;
+  -o-transition: all 0.3s ease 0.6s;
+  transition: all 0.3s ease 0.6s;
+  opacity: 0;
+  -webkit-transform: translate(-120%, 0);
+      -ms-transform: translate(-120%, 0);
+          transform: translate(-120%, 0);
   font-family: Guerrilla, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -836,6 +888,13 @@ body._lock {
   line-height: 29px;
   margin: 0px 0px 45px 0px;
   position: relative;
+}
+
+.about__susubtitle._anim-items._csdsa {
+  opacity: 1;
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+          transform: translate(0, 0);
 }
 
 .about__susubtitle:before {
@@ -859,11 +918,25 @@ body._lock {
 }
 
 .about__awards_el {
+  -webkit-transition: all 0.3s ease 0.2s;
+  -o-transition: all 0.3s ease 0.2s;
+  transition: all 0.3s ease 0.2s;
+  opacity: 0;
+  -webkit-transform: translate(-120%, 0);
+      -ms-transform: translate(-120%, 0);
+          transform: translate(-120%, 0);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
   margin: 0px 0px 25px 0px;
+}
+
+.about__awards_el._anim-items._csdsa {
+  opacity: 1;
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+          transform: translate(0, 0);
 }
 
 .about__awards_el:nth-last-child(1) {
@@ -903,9 +976,23 @@ body._lock {
 }
 
 .about__image_nastya {
+  -webkit-transition: all 0.3s ease 0.2s;
+  -o-transition: all 0.3s ease 0.2s;
+  transition: all 0.3s ease 0.2s;
+  opacity: 0;
+  -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+          transform: scale(0);
   position: absolute;
   bottom: -34px;
   right: 0;
+}
+
+.about__image_nastya._anim-items._csdsa {
+  opacity: 1;
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
 }
 
 .about__image_pero {
@@ -933,6 +1020,13 @@ body._lock {
 }
 
 .about2__subtitle {
+  -webkit-transition: all 0.3s ease 0.2s;
+  -o-transition: all 0.3s ease 0.2s;
+  transition: all 0.3s ease 0.2s;
+  opacity: 0;
+  -webkit-transform: translate(120%, 0);
+      -ms-transform: translate(120%, 0);
+          transform: translate(120%, 0);
   font-family: Guerrilla, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -942,7 +1036,21 @@ body._lock {
   text-align: right;
 }
 
+.about2__subtitle._anim-items._csdsa {
+  opacity: 1;
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+          transform: translate(0, 0);
+}
+
 .about2__susubtitle {
+  -webkit-transition: all 0.3s ease 0.3s;
+  -o-transition: all 0.3s ease 0.3s;
+  transition: all 0.3s ease 0.3s;
+  opacity: 0;
+  -webkit-transform: translate(120%, 0);
+      -ms-transform: translate(120%, 0);
+          transform: translate(120%, 0);
   font-family: Guerrilla, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -950,6 +1058,13 @@ body._lock {
   line-height: 29px;
   margin: 0px 0px 45px 0px;
   position: relative;
+}
+
+.about2__susubtitle._anim-items._csdsa {
+  opacity: 1;
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+          transform: translate(0, 0);
 }
 
 .about2__susubtitle:before {
@@ -974,6 +1089,13 @@ body._lock {
 }
 
 .about2__awards_el {
+  -webkit-transition: all 0.3s ease 0.4s;
+  -o-transition: all 0.3s ease 0.4s;
+  transition: all 0.3s ease 0.4s;
+  opacity: 0;
+  -webkit-transform: translate(120%, 0);
+      -ms-transform: translate(120%, 0);
+          transform: translate(120%, 0);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -982,6 +1104,13 @@ body._lock {
           justify-content: flex-end;
   width: 100%;
   margin: 0px 0px 25px 0px;
+}
+
+.about2__awards_el._anim-items._csdsa {
+  opacity: 1;
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+          transform: translate(0, 0);
 }
 
 .about2__awards_el:nth-last-child(1) {
@@ -1022,10 +1151,24 @@ body._lock {
 }
 
 .about2__image_taiane {
+  -webkit-transition: all 0.3s ease 0.5s;
+  -o-transition: all 0.3s ease 0.5s;
+  transition: all 0.3s ease 0.5s;
+  opacity: 0;
+  -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+          transform: scale(0);
   position: absolute;
   bottom: 0;
   max-width: 776px;
   left: -184px;
+}
+
+.about2__image_taiane._anim-items._csdsa {
+  opacity: 1;
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
 }
 
 .about2__image_pero {
@@ -1105,7 +1248,21 @@ body._lock {
 }
 
 .howWork__circle_el {
+  -webkit-transition: all 0.3s ease 0.2s;
+  -o-transition: all 0.3s ease 0.2s;
+  transition: all 0.3s ease 0.2s;
+  opacity: 0;
+  -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+          transform: scale(0);
   max-width: 224px;
+}
+
+.howWork__circle_el._anim-items._csdsa {
+  opacity: 1;
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
 }
 
 .howWork__circle_img {
